{
  "version": 4,
  "terraform_version": "0.12.7",
  "serial": 9,
  "lineage": "8f34767e-c834-8d14-bfc0-8bcdd75bd5b4",
  "resources": [
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG-APP01",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD01-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-APP01",
            "location": "southeastasia",
            "name": "NSG-APP01",
            "resource_group_name": "PROD01-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDPFromALL",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.PROD01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG-DB01",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD01-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-DB01",
            "location": "southeastasia",
            "name": "NSG-DB01",
            "resource_group_name": "PROD01-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowHTTPSFromALL",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.PROD01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_network_security_group",
      "name": "NSG-WEB01",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD01-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-WEB01",
            "location": "southeastasia",
            "name": "NSG-WEB01",
            "resource_group_name": "PROD01-RG",
            "security_rule": [
              {
                "access": "Allow",
                "description": "",
                "destination_address_prefix": "*",
                "destination_address_prefixes": [],
                "destination_application_security_group_ids": [],
                "destination_port_range": "*",
                "destination_port_ranges": [],
                "direction": "Inbound",
                "name": "AllowRDPFromALL",
                "priority": 100,
                "protocol": "Tcp",
                "source_address_prefix": "*",
                "source_address_prefixes": [],
                "source_application_security_group_ids": [],
                "source_port_range": "*",
                "source_port_ranges": []
              }
            ],
            "tags": {}
          },
          "depends_on": [
            "azurerm_resource_group.PROD01"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "PROD01-DB-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.2.32/28",
            "id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD01-RG/providers/Microsoft.Network/virtualNetworks/PROD01-vNET/subnets/PROD01-DB-SUBNET",
            "name": "PROD01-DB-SUBNET",
            "network_security_group_id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD01-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-DB01",
            "resource_group_name": "PROD01-RG",
            "virtual_network_name": "PROD01-vNET"
          },
          "depends_on": [
            "azurerm_network_security_group.NSG-DB01",
            "azurerm_resource_group.PROD01",
            "azurerm_virtual_network.PROD01-vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "PROD01-app-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.2.16/28",
            "id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD01-RG/providers/Microsoft.Network/virtualNetworks/PROD01-vNET/subnets/PROD01-APP-SUBNET",
            "name": "PROD01-APP-SUBNET",
            "network_security_group_id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD01-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-APP01",
            "resource_group_name": "PROD01-RG",
            "virtual_network_name": "PROD01-vNET"
          },
          "depends_on": [
            "azurerm_network_security_group.NSG-APP01",
            "azurerm_resource_group.PROD01",
            "azurerm_virtual_network.PROD01-vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_subnet",
      "name": "PROD01-frondend-subnet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_prefix": "192.168.2.0/28",
            "id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD01-RG/providers/Microsoft.Network/virtualNetworks/PROD01-vNET/subnets/PROD01-WEB-SUBNET",
            "name": "PROD01-WEB-SUBNET",
            "network_security_group_id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD01-RG/providers/Microsoft.Network/networkSecurityGroups/NSG-WEB01",
            "resource_group_name": "PROD01-RG",
            "virtual_network_name": "PROD01-vNET"
          },
          "depends_on": [
            "azurerm_network_security_group.NSG-WEB01",
            "azurerm_resource_group.PROD01",
            "azurerm_virtual_network.PROD01-vNet"
          ]
        }
      ]
    },
    {
      "mode": "managed",
      "type": "azurerm_virtual_network",
      "name": "PROD01-vNet",
      "provider": "provider.azurerm",
      "instances": [
        {
          "schema_version": 0,
          "attributes": {
            "address_space": [
              "192.168.2.0/24"
            ],
            "id": "/subscriptions/ee31172f-3e56-4f55-94e8-6adce8c23e83/resourceGroups/PROD01-RG/providers/Microsoft.Network/virtualNetworks/PROD01-vNET",
            "location": "southeastasia",
            "name": "PROD01-vNET",
            "resource_group_name": "PROD01-RG",
            "tags": {
              "environment": "Terraform"
            }
          },
          "depends_on": [
            "azurerm_resource_group.PROD01"
          ]
        }
      ]
    }
  ]
}